--- a/README.Rmd
+++ b/README.Rmd
@@ -27,22 +27,23 @@ knitr::opts_chunk$set(
    
 # ggpubr: 'ggplot2' Based Publication Ready Plots
        
-     
-The idea behind ggplot2 is seductively simple but the detail is, yes, difficult. To customize a plot, the syntax is sometimes a tiny bit opaque and this raises the level of difficulty.
+ggplot2 by [Hadley Wickham](http://docs.ggplot2.org/current/) is an excellent and flexible package for elegant data visualization in R. However the default generated plots requires some formatting before we can send them for publication. Furthermore, to customize a ggplot, the syntax is sometimes a tiny bit opaque and this raises the level of difficulty.
 
-Here, we provide ggpubr package to create, as well as to customize, quickly and easily ggplot2-base publication ready plots. 
+Here, we provide ggpubr package to create and customize easily ggplot2-based publication ready plots. 
      
      
-## Installation
+## Installation and loading
     
    
+- Install from [CRAN](https://cran.r-project.org/package=ggpubr) as follow:
+  
+  
 ```{r, eval = FALSE, echo = FALSE}
-Install from [CRAN](https://cran.r-project.org/package=ggpubr) as follow:
 install.packages("ggpubr")
 ```
     
     
-CRAN version is not published yet. Meanwhile, it's possible to install the latest version from [GitHub](https://github.com/kassambara/ggpubr) as follow: 
+Or, install the latest version from [GitHub](https://github.com/kassambara/ggpubr) as follow: 
     
    
 ```{r, eval = FALSE}
@@ -55,6 +56,7 @@ devtools::install_github("kassambara/ggpubr")
 ## Geting started
     
 Find out more at http://www.sthda.com/english/rpkgs/ggpubr.
+    
     
 ### Density and histogram plots
      
@@ -113,6 +115,7 @@ ggviolin(df, x = "dose", y = "len", fill = "dose",
    palette = c("#00AFBB", "#E7B800", "#FC4E07"),
    add = "boxplot", add.params = list(fill = "white"))
 ```
+     
      
      
 ### More
