--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,6 @@ knitr::opts_chunk$set(
 ```
 
     
-
 [![Build Status](https://api.travis-ci.org/kassambara/ggpubr.png)](https://travis-ci.org/kassambara/ggpubr)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/ggpubr)](http://cran.r-project.org/package=ggpubr)
 [![Downloads](http://cranlogs.r-pkg.org/badges/ggpubr)](https://cran.r-project.org/package=ggpubr)
@@ -24,9 +23,9 @@ knitr::opts_chunk$set(
    
 # ggpubr: 'ggplot2' Based Publication Ready Plots
        
-ggplot2 by [Hadley Wickham](http://docs.ggplot2.org/current/) is an excellent and flexible package for elegant data visualization in R. However the default generated plots requires some formatting before we can send them for publication. Furthermore, to customize a ggplot, the syntax is sometimes a tiny bit opaque and this raises the level of difficulty.
+ggplot2 by [Hadley Wickham](http://docs.ggplot2.org/current/) is an excellent and flexible package for elegant data visualization in R. However the default generated plots requires some formatting before we can send them for publication. Furthermore, to customize a ggplot, the syntax is opaque and this raises the level of difficulty for researchers with no advanced R programming skills.
 
-Here, we provide ggpubr package to create and customize easily ggplot2-based publication ready plots. 
+The 'ggpubr' package provides some easy-to-use functions for creating and customizing 'ggplot2'- based publication ready plots. 
      
      
 ## Installation and loading
