blog posts added

--- a/README.Rmd
+++ b/README.Rmd
@@ -118,4 +118,9 @@ ggviolin(df, x = "dose", y = "len", fill = "dose",
 
 Find out more at http://www.sthda.com/english/rpkgs/ggpubr.
   
+  
+## Blog posts
+   
+- A. Kassambara. STHDA Jully 2016. [ggpubr R Package: ggplot2-Based Publication Ready Plots](http://www.sthda.com/english/wiki/ggpubr-r-package-ggplot2-based-publication-ready-plots)
+
      
