--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ output:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "README-",
+  fig.path = "tools/README-",
   warning = FALSE
 )
 ```
