--- a/README.Rmd
+++ b/README.Rmd
@@ -100,9 +100,17 @@ head(df, 4)
 # Change outline colors by groups: dose
 # Use custom color palette
 # Add jitter points and change the shape by groups
- ggboxplot(df, x = "dose", y = "len",
-    color = "dose", palette =c("#00AFBB", "#E7B800", "#FC4E07"),
-    add = "jitter", shape = "dose")
+ p <- ggboxplot(df, x = "dose", y = "len",
+                color = "dose", palette =c("#00AFBB", "#E7B800", "#FC4E07"),
+                add = "jitter", shape = "dose")
+ p
+ 
+ # Add p-values comparing groups
+ # Specify the comparisons you want
+my_comparisons <- list( c("0.5", "1"), c("1", "2"), c("0.5", "2") )
+p + stat_compare_means(comparisons = my_comparisons)+ # Add pairwise comparisons p-value
+  stat_compare_means(label.y = 50)     # Add global p-value
+
  
 # Violin plots with box plots inside
 # +++++++++++++++++++++++++++++++++
