updating link in README

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,19 +17,19 @@ knitr::opts_chunk$set(
 
     
 [![Build Status](https://api.travis-ci.org/kassambara/ggpubr.png)](https://travis-ci.org/kassambara/ggpubr)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/ggpubr)](https://cran.r-project.org/package=ggpubr)
-[![Downloads](http://cranlogs.r-pkg.org/badges/ggpubr)](https://cran.r-project.org/package=ggpubr)
-[![Total Downloads](http://cranlogs.r-pkg.org/badges/grand-total/ggpubr?color=orange)](http://cranlogs.r-pkg.org/badges/grand-total/ggpubr)
+[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/ggpubr)](https://cran.r-project.org/package=ggpubr)
+[![Downloads](https://cranlogs.r-pkg.org/badges/ggpubr)](https://cran.r-project.org/package=ggpubr)
+[![Total Downloads](https://cranlogs.r-pkg.org/badges/grand-total/ggpubr?color=orange)](https://cranlogs.r-pkg.org/badges/grand-total/ggpubr)
 
    
 # ggpubr: 'ggplot2' Based Publication Ready Plots
        
-ggplot2 by [Hadley Wickham](http://docs.ggplot2.org/current/) is an excellent and flexible package for elegant data visualization in R. However the default generated plots requires some formatting before we can send them for publication. Furthermore, to customize a ggplot, the syntax is opaque and this raises the level of difficulty for researchers with no advanced R programming skills.
+[ggplot2, by Hadley Wickham, ](https://ggplot2.tidyverse.org/) is an excellent and flexible package for elegant data visualization in R. However the default generated plots requires some formatting before we can send them for publication. Furthermore, to customize a ggplot, the syntax is opaque and this raises the level of difficulty for researchers with no advanced R programming skills.
 
 The 'ggpubr' package provides some easy-to-use functions for creating and customizing 'ggplot2'- based publication ready plots. 
      
      
-Find out more at http://www.sthda.com/english/rpkgs/ggpubr.
+Find out more at https://rpkgs.datanovia.com/ggpubr.
    
 ## Installation and loading
     
@@ -329,7 +329,7 @@ ggdotchart(dfm, x = "name", y = "mpg",
    
 ## More
 
-Find out more at http://www.sthda.com/english/rpkgs/ggpubr.
+Find out more at https://rpkgs.datanovia.com/ggpubr.
   
   
 ## Blog posts
